Create extension method for phoneNumber Validation

--- a/Mc2.CrudTest.Model/Mc2.CrudTest.Model.csproj
+++ b/Mc2.CrudTest.Model/Mc2.CrudTest.Model.csproj
@@ -6,4 +6,7 @@
         <PackageReference Include="DotNetCore.Validation" Version="16.28.0" />
         <PackageReference Include="Google.LibPhoneNumber" Version="1.0.0" />
     </ItemGroup>
+    <ItemGroup>
+      <Folder Include="Customer\Phon\" />
+    </ItemGroup>
 </Project>
