Insert Customer implementation CRUD

--- a/Mc2.CrudTest.Presentation/Front/Mc2.CrudTest.Presentation.Front.csproj
+++ b/Mc2.CrudTest.Presentation/Front/Mc2.CrudTest.Presentation.Front.csproj
@@ -5,12 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="libphonenumber-csharp" Version="8.12.46" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.11" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.11" PrivateAssets="all" />
+    <PackageReference Include="Radzen.Blazor" Version="3.18.7" />
     <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
+	  <ProjectReference Include="..\..\Mc2.CrudTest.DataLayer\Mc2.CrudTest.DataLayer.csproj" />
 	  <ProjectReference Include="..\Shared\Mc2.CrudTest.Shared.csproj" />
   </ItemGroup>
 
