--- a/Mc2.CrudTest.Presentation/Server/appsettings.json
+++ b/Mc2.CrudTest.Presentation/Server/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Mc2.CrudTest.Connection": "Data Source=.; Initial Catalog=Mc2.CrudTestDB; Integrated Security=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,5 +9,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-"AllowedHosts": "*"
+  "AllowedHosts": "*"
 }
