--- a/Mc2.CrudTest.Presentation/Server/appsettings.json
+++ b/Mc2.CrudTest.Presentation/Server/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=RAMIN;Initial Catalog=smartmed;User ID=MSSQL/RMA;password=123;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
