CQRS Added To Project , Controllers Added And CRUD Works , TODO -> Create Check For it And Adding Unit Tests

--- a/Mc2.CrudTest.Presentation/Server/Mc2.CrudTest.Presentation.Server.csproj
+++ b/Mc2.CrudTest.Presentation/Server/Mc2.CrudTest.Presentation.Server.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="10.0.1" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="5.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.11">
@@ -19,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Shared\Mc2.CrudTest.Shared.csproj" />
+    <ProjectReference Include="..\Shared\Mc2.CrudTest.Data.csproj" />
     <ProjectReference Include="..\Front\Mc2.CrudTest.Presentation.Front.csproj" />
   </ItemGroup>
 
