--- a/Mc2.CrudTest.Presentation/Server/Mc2.CrudTest.Presentation.Server.csproj
+++ b/Mc2.CrudTest.Presentation/Server/Mc2.CrudTest.Presentation.Server.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="libphonenumber-csharp" Version="8.12.46" />
     <PackageReference Include="MediatR" Version="10.0.1" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="5.0.11" />
