--- a/Mc2.CrudTest.Presentation/Shared/Mc2.CrudTest.Data.csproj
+++ b/Mc2.CrudTest.Presentation/Shared/Mc2.CrudTest.Data.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="libphonenumber-csharp" Version="8.12.46" />
     <PackageReference Include="MediatR" Version="10.0.1" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.11" />
