--- a/Mc2.CrudTest.Presentation/Server/appsettings.Development.json
+++ b/Mc2.CrudTest.Presentation/Server/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Server=.;Database=CrudTest;Trusted_Connection=True;"
   }
 }
