--- a/Mc2.CrudTest.Presentation/Server/appsettings.json
+++ b/Mc2.CrudTest.Presentation/Server/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "FHTConnection": "Data Source=.;Initial Catalog=MC2DB;Persist Security Info=True;User ID=sa;Password=123456;MultipleActiveResultSets=True;"
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,5 +10,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-"AllowedHosts": "*"
+  "AllowedHosts": "*"
 }
