--- a/Mc2.CrudTest.Presentation/Front/Mc2.CrudTest.Presentation.Front.csproj
+++ b/Mc2.CrudTest.Presentation/Front/Mc2.CrudTest.Presentation.Front.csproj
@@ -1,17 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
-  <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<LangVersion>Preview</LangVersion>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.11" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.11" PrivateAssets="all" />
-    <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.5" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.5" PrivateAssets="all" />
+		<PackageReference Include="System.Net.Http.Json" Version="7.0.0-preview.4.22229.4" />
+		<!--<PackageReference Include="Blazored.FluentValidation" Version="2.0.3" />-->
+	</ItemGroup>
 
-  <ItemGroup>
-	  <ProjectReference Include="..\Shared\Mc2.CrudTest.Shared.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Shared\Mc2.CrudTest.Shared.csproj" />
+	</ItemGroup>
 
 </Project>
