--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,151 @@ services:
     build:
       context: .
       dockerfile: Mc2.CrudTest.Presentation/Server/Dockerfile
+
+  sqldb:
+    image: mcr.microsoft.com/mssql/server:2019-latest
+    environment:
+      - SA_PASSWORD=1Secure*Password1
+      - ACCEPT_EULA=Y
+    ports:
+      - "1440:1433"
+
+
+#version: '3.8'
+#services:
+#  ms-sql-server:
+#    image: mcr.microsoft.com/mssql/server:2017-latest-ubuntu
+#    environment:
+#      ACCEPT_EULA: "Y"
+#      SA_PASSWORD: "Youtube2021"
+#      MSSQL_PID: Express
+#    ports:
+#      - "1433:1433"
+#  book-app:
+#    build: 
+#      context: .
+#      args:
+#        buildnbinfo: 1
+#    environment:
+#      DbServer: "ms-sql-server"
+#      DbPort: "1433"
+#      DbUser: "SA"
+#      Password: "Youtube2021"
+#      Database: "bookDb"
+#    ports: 
+#      - "8090:80"
+
+
+#version: '3.4'
+
+#services:
+#  db:
+#    image: "mcr.microsoft.com/mssql/server:2017-latest"
+#    environment:
+#      - ACCEPT_EULA=Y
+#      - SA_PASSWORD=1Secure*Password1
+#    ports:
+#      - 1433:1433
+
+#  dockersqlserver:
+#    image: ${DOCKER_REGISTRY-}dockersqlserver
+#    build:
+#      context: .
+#      dockerfile: DockerSqlServer/Dockerfile
+#    depends_on:
+#      - db
+
+
+#version: "3.3"
+#services:
+#  web:    
+#    container_name: web
+#    build:      
+#      context: ..
+#      dockerfile: ./HelloDockerWeb/Dockerfile
+#    depends_on: [ mssql ]        
+#    ports:
+#      - "8080:80"
+#  mssql:
+#    image: "mcr.microsoft.com/mssql/server"
+#    container_name: mssql
+#    hostname: mssql
+#    environment:
+#      SA_PASSWORD: "Pass123!"
+#      ACCEPT_EULA: "Y"
+#    restart: unless-stopped    
+#    ports:
+#      # So we can access the database
+#      # From a tool like JetBrains Rider
+#      # Optional for this demo
+#      - "11433:1433" 
+
+      
+#version: '3.8'
+#services: 
+#    codewithvijay:
+#        image: mcr.microsoft.com/mssql/server:2017-latest-ubuntu
+#        environment: 
+#            ACCEPT_EULA: "Y"
+#            SA_PASSWORD: "YOURPASSWORD"
+#            MSSQL_PID: Express
+#        ports: 
+#            - "1433:1433"
+#    employeeapi:
+#        build: .
+#        depends_on: 
+#            - codewithvijay
+#        environment: 
+#            ServerName: "codewithvijay"
+#            Database: "Employee"
+#            UserName: "SA"
+#            Password: "YOURPASSWORD"
+#        ports: 
+#            - "80:80"
+
+
+
+#version: "3.9"
+#services:
+#    web:
+#        build: .
+#        ports:
+#            - "8000:80"
+#        depends_on:
+#            - db
+#    db:
+#        image: "mcr.microsoft.com/mssql/server"
+#        environment:
+#            SA_PASSWORD: "Your_password123"
+#            ACCEPT_EULA: "Y"
+
+
+
+
+#version: '3.3'
+
+#services:
+#  db:
+#    image: mysql:5.7
+#    volumes:
+#    - db_data:/var/lib/mysql
+#    restart: always
+#    environment:
+#      MYSQL_ROOT_PASSWORD: somewordpress
+#      MYSQL_DATABASE: wordpress
+#      MYSQL_USER: wordpress
+#      MYSQL_PASSWORD: wordpress
+
+#  wordpress:
+#    depends_on:
+#    - db
+#    image: wordpress:latest
+#    ports:
+#    - "8000:80"
+#    restart: always
+#    environment:
+#      WORDPRESS_DB_HOST: db:3306
+#      WORDPRESS_DB_USER: wordpress
+#      WORDPRESS_DB_PASSWORD: wordpress
+#volumes:
+#  db_data:
