--- a/Mc2.CrudTest.Bootstrapper/Mc2.CrudTest.Bootstrapper.csproj
+++ b/Mc2.CrudTest.Bootstrapper/Mc2.CrudTest.Bootstrapper.csproj
@@ -14,6 +14,7 @@
 		<PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.0.1" />
 		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
 	</ItemGroup>
 
 	<ItemGroup>
