--- a/Mc2.CrudTest.Presentation/Server/appsettings.json
+++ b/Mc2.CrudTest.Presentation/Server/appsettings.json
@@ -1,10 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-"AllowedHosts": "*"
+    "ConnectionStrings": {
+        //"DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Mc2CrudTestDB;Trusted_Connection=True;MultipleActiveResultSets=true",
+        "DefaultConnection": "Mc2CrudTestDB"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
