implementing blazor web assembly project and add two razor page for see and add and edit customers

--- a/Mc2.CrudTest.Presentation/Server/appsettings.Development.json
+++ b/Mc2.CrudTest.Presentation/Server/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "DbConnection": "Data Source=localhost\\SQLEXPRESS;Database=MyCrudDB; Trusted_Connection=Yes;",
+    "DbConnectionDocker": "Server=ms-sql-server,1433;Database=MyCrudDB;MultipleActiveResultSets=true;User ID=sa;Password=klfgjkagshdkljkgVeryComplex123Password"
   }
 }
