--- a/Mc2.CrudTest.Presentation/Server/appsettings.json
+++ b/Mc2.CrudTest.Presentation/Server/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-"AllowedHosts": "*"
+  "ConnectionStrings": {
+    "DbConnection": "Data Source=localhost\\SQLEXPRESS;Database=MyCrudDB; Trusted_Connection=Yes;",
+    "DbConnectionDocker": "Server=ms-sql-server,1433;Database=MyCrudDB;MultipleActiveResultSets=true;User ID=sa;Password=klfgjkagshdkljkgVeryComplex123Password"
+  },
+  "AllowedHosts": "*"
 }
