--- a/Mc2.CrudTest.Presentation/Server/appsettings.json
+++ b/Mc2.CrudTest.Presentation/Server/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-"AllowedHosts": "*"
+  "ConnectionStrings": {
+    "SqlServer": "Data Source=DESKTOP-UOEI67V;Initial Catalog=Mc2.CrudTest_Db;Integrated Security=true;"
+  },
+  "AllowedHosts": "*"
 }
