Unit tests added to Solution, mediator added to solution, Validators used

--- a/Mc2.CrudTest.ApplicationTests/Mc2.CrudTest.ApplicationTests.csproj
+++ b/Mc2.CrudTest.ApplicationTests/Mc2.CrudTest.ApplicationTests.csproj
@@ -6,17 +6,14 @@
     <Nullable>enable</Nullable>
 
     <IsPackable>false</IsPackable>
-
-    <RootNamespace>Mc2.CrudTest.Api.Test</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MediatR" Version="10.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.6" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
     <PackageReference Include="Shouldly" Version="4.0.3" />
     <PackageReference Include="xunit" Version="2.4.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
@@ -27,7 +24,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Mc2.Crud.Api\Mc2.CrudTest.Api.csproj" />
+    <ProjectReference Include="..\Mc2.CrudTest.Application\Mc2.CrudTest.Application.csproj" />
+    <ProjectReference Include="..\Mc2.CrudTest.DataAccess\Mc2.CrudTest.DataAccess.csproj" />
   </ItemGroup>
 
 </Project>
