--- a/Mc2.Crud.Api/appsettings.json
+++ b/Mc2.Crud.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=(localdb)\\projectModels;Database=Mc2CrudTest;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "Default": "Server=(localhost)\\projectModels;Database=Mc2CrudTest;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
