--- a/Mc2.Crud.Domain/Mc2.CrudTest.Domain.csproj
+++ b/Mc2.Crud.Domain/Mc2.CrudTest.Domain.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.0.2" />
     <PackageReference Include="libphonenumber-csharp" Version="8.12.49" />
+    <PackageReference Include="MediatR" Version="10.0.1" />
   </ItemGroup>
 
 </Project>
