--- a/Mc2.CrudTest.AcceptanceTests/Mc2.CrudTest.AcceptanceTests.csproj
+++ b/Mc2.CrudTest.AcceptanceTests/Mc2.CrudTest.AcceptanceTests.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="StepDefitions\**" />
+    <EmbeddedResource Remove="StepDefitions\**" />
+    <None Remove="StepDefitions\**" />
+    <SpecFlowFeatureFiles Remove="StepDefitions\**" />
+    <SpecFlowObsoleteCodeBehindFiles Remove="StepDefitions\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.3" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.3" />
@@ -16,7 +24,6 @@
 
   <ItemGroup>
     <Folder Include="Features\" />
-    <Folder Include="StepDefitions\" />
   </ItemGroup>
 
   <ItemGroup>
