--- a/Mc2.CrudTest.DataAccess/Mc2.CrudTest.DataAccess.csproj
+++ b/Mc2.CrudTest.DataAccess/Mc2.CrudTest.DataAccess.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\Mc2.Crud.Domain\Mc2.CrudTest.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
