Adding database context and registering it in ioc container

--- a/src/Mc2.CrudTest.Infrastructure/Mc2.CrudTest.Infrastructure.csproj
+++ b/src/Mc2.CrudTest.Infrastructure/Mc2.CrudTest.Infrastructure.csproj
@@ -12,4 +12,8 @@
     <ProjectReference Include="..\Mc2.CrudTest.Application\Mc2.CrudTest.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Persistence\Migrations\" />
+  </ItemGroup>
+
 </Project>
