--- a/src/Mc2.CrudTest.Application/Mc2.CrudTest.Application.csproj
+++ b/src/Mc2.CrudTest.Application/Mc2.CrudTest.Application.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\Mc2.CrudTest.Domain\Mc2.CrudTest.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Administration\" />
+  </ItemGroup>
+
 </Project>
