email spam detector unit test with lbfgs logistic regression algorithm and ML.NET

--- a/Mc2.CrudTest.AcceptanceTests/Mc2.CrudTest.AcceptanceTests.csproj
+++ b/Mc2.CrudTest.AcceptanceTests/Mc2.CrudTest.AcceptanceTests.csproj
@@ -25,6 +25,7 @@
     <ProjectReference Include="..\Mc2.CrudTest.Application\Mc2.CrudTest.Application.csproj" />
     <ProjectReference Include="..\Mc2.CrudTest.Domain\Mc2.CrudTest.Domain.csproj" />
     <ProjectReference Include="..\Mc2.CrudTest.Presentation\Server\Mc2.CrudTest.Presentation.Server.csproj" />
+    <ProjectReference Include="..\Mc2.CrudTest.SpamDetector_LbfgsLogisticRegression\Mc2.CrudTest.SpamDetector_LbfgsLogisticRegression.csproj" />
   </ItemGroup>
 
 </Project>
