create Queries commands - using Dapper For speed

--- a/Mc2.CrudTest.Presentation/Server/appsettings.json
+++ b/Mc2.CrudTest.Presentation/Server/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Customer;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=.;Initial Catalog=Customers;User Id=sa;Password=123;Connection Timeout=1000"
   }
 
 }
